samples/errors/string_concat_wrong_type.opal
;; Error: `str` expects String arguments, but `n` is constrained to Int
;; by the arithmetic on the next line
(let greet {n}
  (str (+ n 1) " items"))
